# Factori

./: CMakeLists.txt  main.cpp  mainwindow.h  resources.qrc
src/: GraphicalGameObject.h  gamescene.h  player.h  style.scss
src/modules/: ActionWindow.cpp  ActionWindow.h  CodeHighlighter.cpp  DebugInfoHandler.h  GLDrawableObject.cpp  GLDrawableObject.h  GLMDI.h  OpenGLScene.cpp  OpenGLScene.h  PerlinNoiseGenerator.cpp  PerlinNoiseGenerator.h  PyAPI.cpp  PyAPI.h  mainwindow.h
